# nano-transformer

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  main.py  pipeline.yaml  pyproject.toml  serve.py
.github/workflows/: build-and-push.yml
conf/: config.yaml
flyte/: pipeline.py
kubeflow/: iris-pipeline.py  pipeline.py
src/nano_transformer/: __about__.py  __init__.py  data.py  models.py  trainer.py
tests/: test_data.py  test_models.py
